--- a/main.tex
+++ b/main.tex
@@ -112,11 +112,11 @@ language=ocaml
 \title[Short Title]{Full Title}         %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
-\titlenote{with title note}             %% \titlenote is optional;
+% \titlenote{with title note}             %% \titlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
 \subtitle{Subtitle}                     %% \subtitle is optional
-\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
+% \subtitlenote{with subtitle note}       %% \subtitlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
 
@@ -303,51 +303,52 @@ Current limitations:
 \end{itemize}
 
 
-\section{Какие объявления генерируются по объявлению типа}
-
-Для каждого объявления типа \lstinline{type ($a_1$, ..., $a_n$) t} генерируются в файле реализации:
-\begin{itemize}
- \item \textit{Interface class} который определяет тип всех трансформаций, которые могут быть применены для значения типа \lstinline{t}.
- \item \textit{Generic catamorphism}, который позволяет применить конкретную трансформациюю к значению типа \lstinline{t}.
-\end{itemize}
-
-А также два соответсвующих объявления в файле интерфейса.
-
-
-Для каждого вида трансформации типа \lstinline{type ($a_1$, ..., $a_n$) t} в файле реализации генерируется:
-\begin{itemize}
- \item \textit{Класс трансформации}, который наследует interface class, принимает функции-трансформации аргементов в момент конструирования и 
-	определяет как именно осуществляется трансформация для значения типа \lstinline{type ($a_1$,...,$a_n$) t}.
- \item Функция трансформации для \lstinline{type ($a_1$, ..., $a_n$) t}, которая принимает функции-трансформации аргументов, инстанциирует
-	класс трансформации и применяет трансформацию.
-\end{itemize}
-Аналогично, два объявления в файле интерфейса.
-
-Чтобы сгенерировать реализицию некоторого вида трансформации для \lstinline{type ($a_1$, ..., $a_n$) t}, необходимо в пространстве имениметь 
-трасформации для всех типов, которые входят в RHS объявления типа. Если же объявление типа является type abbrevation (т.е. 
- \lstinline{type ($a_1$, ..., $a_n$) t = ($b_1$, ..., $b_m$) $\tau$} или для полиморфных вариантов 
- \lstinline{type ($a_1$, ..., $a_n$) t = [ ($b_1$, ..., $b_m$) $\tau$ | ... ]}) 
- то, дополнительно необходимо иметь класс трансформации для типа
- $\tau$.
-
-Все классы трансформации принимают (n+1) параметров: одна функция трансформации рекурсивного вхождения объявления типа 
-(здесь мы сужаем множество поддерживаемых определений типов только до регулярных) и функции-трансформации для типовых параметров. Для процесса
-генерации является существенным, чтобы все классы, определяющие трансформацию, имели сходную сигнатуру, выводимую только из имени типа 
-и количества его параметров. Поэтому, функцию-трансформацию рекурсивного вхождения типа нельзя опустить для нерекурсивных типов.
-
-Для взаимно-рекурсивных определений типов затруднительно иметь трансформацию для всех объявляемых типов в момент объявления класса 
-трансформации (OCaml не поддерживает взаимно-рекурсивные определения между классами и функциями). Поэтому в файле реализации 
-для каждого объявления типа генерируются два класса, где первый имеет дополнительные параметры для функций-трансформаций
-взаимно-рекурсивных определений. После определения функций-трансформаций для объявляемых типов генерируются ещё несколько классов,
-которые наследуют предыдущие определения, конкретизируя функции-трансформации для объявляемых взаимно-рекурсивных типов. 
-Таким образом, все сгенерированные классы для взаимно-рекурсивных определений имеют такую же форму в сигнатуре, как и классы для
-одиночных определений типов.
-
-В GT также поддерживаются объявление полиморфных вариантов, которые оказывают влияние на форму сигнатуры всех генерируемых классов.
-Для поддержки возможности объединения полиморфных вариантов при объявлении типа все классы имеют дополнительный параметр, который 
-является свободной типовой переменной в случае класса для обычных объявлений типов, и является \textit{открытой} версией типа если класс 
-соответствует полиморфному вариантному типу. Также, полиморфный вариантный тип требует дополнительных аннотаций открытости при объявлении
-сигнатуры функции-трансформации для трасформации вида \verb=gmap= (a.k.a. functor).
+% \section{Какие объявления генерируются по объявлению типа}
+% 
+% Для каждого объявления типа \lstinline{type ($a_1$, ..., $a_n$) t} генерируются в файле реализации:
+% \begin{itemize}
+%  \item \textit{Interface class} который определяет тип всех трансформаций, которые могут быть применены для значения типа \lstinline{t}.
+%  \item \textit{Generic catamorphism}, который позволяет применить конкретную трансформацию к значению типа \lstinline{t}.
+%  \item Для взаимно рекурсивных определений также генерируется неподвижная точка.
+% \end{itemize}
+% 
+% А также соответствующие объявления в файле интерфейса.
+% 
+% 
+% Для каждого вида трансформации типа \lstinline{type ($a_1$, ..., $a_n$) t} в файле реализации генерируется:
+% \begin{itemize}
+%  \item \textit{Класс трансформации}, который наследует interface class, принимает функции-трансформации аргументов в момент конструирования и 
+% 	определяет как именно осуществляется трансформация для значения типа \lstinline{type ($a_1$,...,$a_n$) t}.
+%  \item Функция трансформации для \lstinline{type ($a_1$, ..., $a_n$) t}, которая принимает функции-трансформации аргументов, инстанциирует
+% 	класс трансформации и применяет трансформацию.
+% \end{itemize}
+% Аналогично, два объявления в файле интерфейса.
+% 
+% Чтобы сгенерировать реализицию некоторого вида трансформации для \lstinline{type ($a_1$, ..., $a_n$) t}, необходимо в пространстве имениметь 
+% трасформации для всех типов, которые входят в RHS объявления типа. Если же объявление типа является type abbrevation (т.е. 
+%  \lstinline{type ($a_1$, ..., $a_n$) t = ($b_1$, ..., $b_m$) $\tau$} или для полиморфных вариантов 
+%  \lstinline{type ($a_1$, ..., $a_n$) t = [ ($b_1$, ..., $b_m$) $\tau$ | ... ]}) 
+%  то, дополнительно необходимо иметь класс трансформации для типа
+%  $\tau$.
+% 
+% Все классы трансформации принимают (n+1) параметров: одна функция трансформации рекурсивного вхождения объявления типа 
+% (здесь мы сужаем множество поддерживаемых определений типов только до регулярных) и функции-трансформации для типовых параметров. Для процесса
+% генерации является существенным, чтобы все классы, определяющие трансформацию, имели сходную сигнатуру, выводимую только из имени типа 
+% и количества его параметров. Поэтому, функцию-трансформацию рекурсивного вхождения типа нельзя опустить для нерекурсивных типов.
+% 
+% Для взаимно-рекурсивных определений типов затруднительно иметь трансформацию для всех объявляемых типов в момент объявления класса 
+% трансформации (OCaml не поддерживает взаимно-рекурсивные определения между классами и функциями). Поэтому в файле реализации 
+% для каждого объявления типа генерируются два класса, где первый имеет дополнительные параметры для функций-трансформаций
+% взаимно-рекурсивных определений. После определения функций-трансформаций для объявляемых типов генерируются ещё несколько классов,
+% которые наследуют предыдущие определения, конкретизируя функции-трансформации для объявляемых взаимно-рекурсивных типов. 
+% Таким образом, все сгенерированные классы для взаимно-рекурсивных определений имеют такую же форму в сигнатуре, как и классы для
+% одиночных определений типов.
+% 
+% В GT также поддерживаются объявление полиморфных вариантов, которые оказывают влияние на форму сигнатуры всех генерируемых классов.
+% Для поддержки возможности объединения полиморфных вариантов при объявлении типа все классы имеют дополнительный параметр, который 
+% является свободной типовой переменной в случае класса для обычных объявлений типов, и является \textit{открытой} версией типа если класс 
+% соответствует полиморфному вариантному типу. Также, полиморфный вариантный тип требует дополнительных аннотаций открытости при объявлении
+% сигнатуры функции-трансформации для трасформации вида \verb=gmap= (a.k.a. functor).
 
 \section{Что конкретно генерируется для разных объявлений типов}
 
@@ -380,8 +381,10 @@ Current limitations:
           \item $'a_i$ is an $i$-th parameter of the type being processed;
           \item $'sa_i$ is a synthesized attribute for type parameter $a_i$;
           \item $'ia_i$ is an inherited attribute for type parameter $a_i$;
-          \item $'inh$ is an inherited attribute for whole type $\xi$;
-          \item $'extra$ -- если сейчас генерируется код для полиморфного варианта, то это открытый тип для $\xi$. Иначе, данный типовый параметр не используется по существу.
+          \item $'inh$ is an inherited attribute for whole value of type ($a_1$, ..., $a_n$) $\tau$;
+          \item $'extra$ -- если сейчас генерируется код для полиморфного варианта, то 
+          это открытый тип для ($a_1$, ..., $a_n$) $\tau$. Иначе, данный типовый параметр 
+          не используется по существу.
           \item $'syn$ is a synthesized attribute for the whole type.
   \end{itemize}
   
@@ -398,7 +401,7 @@ Current limitations:
   end
   \end{lstlisting}
   where \begin{itemize}
-          \item transformation $f\!self$ is a current transformation; class is defined in open recursion style and will receive it after tying the knot
+          \item transformation $f\!sel\!f$ is a current transformation; class is defined in open recursion style and will receive it after tying the knot
           \item $f\!a_i$ of type \lstinline{$ia_i$ -> $a_i$ -> $sa_i$} are transformation functions for type parameters;
           \item $'sa_i$ is a synthesized attribute for type parameter $a_i$;
           \item $'ia_i$ is an inherited attribute for type parameter $a_i$;
@@ -435,7 +438,7 @@ and  ($a_{n1}$, ..., $a_{m_n}$) $\tau_n$ = ...
  \item По взаимно рекурсивным определениям генерируется неподвижная точка, которая принимает функции для конструирования объектов-экземпляров классов $trait\_\tau_i\_t\_stub$, создает соответствующие объекты и возвращает $n$ функций-трансформаций для типов $\tau_i$ ($i=1..n$).
 
 \begin{lstlisting}
-let fix_a $\overline{c_{i}^{init}}$ =
+let fix $\overline{c_{i}^{init}}$ =
   let rec $trait_1$ $\overline{f_{m1}}$ i s = gcata_a ($c_{1}^{init}$ $\overline{trait_i}$ $\overline{f_{m1}}$ $trait_1$) i s
   ...
   and     $trait_n$ $\overline{f_{mn}}$ i s = gcata_b ($c_{n}^{init}$ $\overline{trait_i}$ $\overline{f_{mn}}$ $trait_n$) i s 
@@ -447,7 +450,7 @@ let fix_a $\overline{c_{i}^{init}}$ =
 \begin{lstlisting}
 let trait_$\tau_i$ eta = 
    let ($f_1$, ..., $f_i$, ..., $f_n$) = 
-     fix_a (new trait_$\tau_1$_t_stub) ... (new trait_$\tau_n$_t_stub) in
+     fix (new trait_$\tau_1$_t_stub) ... (new trait_$\tau_n$_t_stub) in
    $f_i$ eta
 \end{lstlisting} 
 
@@ -464,6 +467,8 @@ end
 
 
 \section{Construction blocks for a transformation function}
+\label{sec:constructionblocks}
+
 A class declaration for transformation trait of of type $(a_1,...,a_n) t$ requires transformations of type parameters $a_i$; these transformation functions will be passed as arguments of class's constructor $trait\_t\_t$.
 
 For all types that was used in declaration of type $t$ we suppose that transformation functions are present in the scope where the type $t$ is declared. As we declare class for transformation object just after type declaration, these functions will be in scope of type declaration too.
@@ -596,6 +601,9 @@ We are also able to construct transformation functions for every $b_i$:
 % 
 % \subsection{Types used in type declaration go out of scope}
 % Случай \listinline{nonrec} типов.
+
+\section{List of supported traits}
+\label{sec:traitslist}
 
 \section{Four ways to add types to visitor classes}
 Виды типизации методов класса:
